<resources>
    <string name="app_name">GirlsSafe</string>
    <string name="title_home">Home</string>
    <string name="title_contact">E-contact</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_timer">Timer</string>
    <string name="map">Map</string>
    <string name="police_contact">Call Police</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="emergency_contact1">Emergency Contact 1</string>
    <string name="emergency_contact2">Emergency Contact 2</string>
    <string name="follow_me">Follow Me</string>
    <string name="search_service">Search Service</string>
    <string name="tips_title">TIPS</string>
    <string name="message_add_contact">To use this feature, you need to create a contact first. Do you want to add a contact now?</string>

    <!-- login activity-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- website link-->
    <string name="website">https://www.safegirls.space/iteration3/knowledge.html</string>

    <!-- Contact detail activity -->
    <string name="set_contact">Set Your E-Contact</string>
    <string name="phone_no">Phone Number</string>
    <string name="name">Name</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="name_title">Your name</string>
    <string name="reply_title">Dial mode for calling police</string>

    <!-- Sync Preferences -->
    <string name="introduction_title">Introduction</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">On
    </string>
    <string name="attachment_summary_off">Off</string>
    <string name="title_activity_contact">ContactActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!--google geo API-->
    <string name="geo_api_link">https://maps.googleapis.com/maps/api/geocode/json?latlng=%d$1,%d$2&amp;key=AIzaSyDX3sBQdaUQtICndjsQQ-eiWaroTytWti0</string>
    <string name="google_api_key">AIzaSyDX3sBQdaUQtICndjsQQ-eiWaroTytWti0 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos_desc"> 1. After the emergency SOS function is enabled, the system will send the template help information to the emergency contact you have selected.
\n\n
2. In addition to the generic help message, the template message will also include a link to the location of the help signal you sent along with the message.
\n\n
3. Before opening SOS, you can customize the template information so that emergency contacts know your situation more precisely.
\n\n
4. Added SOS help signal sound to the version, making it easier to get help from people around.
    </string>
    <string name="follow_me_desc">
        1. Start your activity and GirlsSafe will provide reassurance that your emergency contact are notified if an alert is activated.\n\n
        2. If an alert is activated, your emergency contact  can get your final location  message.
    </string>
    <string name="safety_tips_desc">
        1.You can take our quiz to find out about safety and safety reports in your area.\n\n
        2. Learning as much as you can about safety can reduce your risk of injury by using this feature.
    </string>
</resources>